--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <a-scene embedded arjs>
     <a-marker type = ' pattern 'url =' path / to / pattern-marker.patt '>
       <a-box position= '0 0,5 0' material= 'opacity: 0.5; '> </a-box>
-    <a-marker>
+    </a-marker>
     <a-entity camera> </a-entity>
   </a-scene>
 </body>
